fix overflow

--- a/wp-content/themes/lideresrcp/sass/modules/_compromisos.scss
+++ b/wp-content/themes/lideresrcp/sass/modules/_compromisos.scss
@@ -1,5 +1,6 @@
 .compromiso {
     margin-bottom: 40px;
+    overflow: hidden;
 
     &--header {
         margin-bottom: 54px;
